--- a/client/.env
+++ b/client/.env
@@ -1,4 +1,4 @@
-REACT_APP_NETWORK = 'https://mainnet.infura.io/v3/d6760e62b67f4937ba1ea2691046f06d'
+REACT_APP_NETWORK = 'https://kovan.infura.io/v3/6bc50fd3870c44a2bdfb420ab1ca3c5b'
 SKIP_PREFLIGHT_CHECK=true
 
-INFURA_API_KEY="7952fe78b3c145499f7a0621e4abb3ab"
+INFURA_API_KEY="9974548705ed44e7936fce57ba6bc500"
