--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   "author": "masaun",
   "license": "MIT",
   "dependencies": {
-    "dotenv": "^8.2.0",
-    "@truffle/hdwallet-provider": "^1.2.0"
+    "@truffle/hdwallet-provider": "^1.2.0",
+    "dotenv": "^8.2.0"
   },
   "devDependencies": {}
 }
