update pages nft

--- a/client/.env
+++ b/client/.env
@@ -2,3 +2,5 @@ REACT_APP_NETWORK = 'https://kovan.infura.io/v3/6bc50fd3870c44a2bdfb420ab1ca3c5b
 SKIP_PREFLIGHT_CHECK=true
 
 INFURA_API_KEY="6bc50fd3870c44a2bdfb420ab1ca3c5b"
+PUBLIC_URL="https://nft-photo.sqoin.us/"
+NODE_ENV="production"  
