--- a/client/package.json
+++ b/client/package.json
@@ -9,15 +9,14 @@
     "json-loader": "^0.5.7",
     "node-sass": "^4.14.1",
     "react": "^16.8.6",
-    "react-app-rewired": "^2.1.0",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^2.1.3",
     "react-toggle": "^4.0.2",
     "rimble-ui": "^0.7.0",
     "styled-components": "^4.1.3",
-    "web3": "1.0.0-beta.37",
+    "web3": "^1.0.0-beta.37",
     "zeppelin-solidity-hot-loader": "^1.2.3"
   },
   "scripts": {
@@ -35,5 +34,9 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "devDependencies": {}
+  "devDependencies": {
+    "customize-cra": "^1.0.0",
+    "react-app-rewired": "^2.1.8",
+    "terser-brunch": "^4.0.0"
+  }
 }
