--- a/newversion/package.json
+++ b/newversion/package.json
@@ -12,16 +12,23 @@
     "@types/jest": "^26.0.23",
     "@types/node": "^15.6.1",
     "@types/react": "^17.0.8",
+    "@types/react-copy-to-clipboard": "^5.0.0",
     "@types/react-dom": "^17.0.5",
     "@types/react-modal": "^3.12.0",
     "bootstrap": "^5.0.1",
+    "file-type": "^16.5.0",
+    "ipfs": "^0.55.3",
     "ipfs-api": "^26.1.2",
+    "it-to-stream": "^1.0.0",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-share": "^4.4.0",
     "reactstrap": "^8.9.0",
+    "sweetalert2": "^11.0.16",
     "typescript": "^4.3.2",
     "web-vitals": "^1.0.1",
     "web3": "^1.3.6"
