--- a/Thegraph/NFTMarketplace/package.json
+++ b/Thegraph/NFTMarketplace/package.json
@@ -5,9 +5,9 @@
     "codegen": "graph codegen",
     "build": "graph build",
     "deploy": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ ZouaouiK/NFTMarketplace",
-    "create-local": "graph create --node http://localhost:8020/ ZouaouiK/NFTMarketplace",
-    "remove-local": "graph remove --node http://localhost:8020/ ZouaouiK/NFTMarketplace",
-    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 ZouaouiK/NFTMarketplace"
+    "create-local": "graph create --node http://localhost:8020/ NFT/NFTMarketplace",
+    "remove-local": "graph remove --node http://localhost:8020/ NFT/NFTMarketplace",
+    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs https://ipfs.network.thegraph.com NFT/NFTMarketplace"
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "0.20.0",
