--- a/newversion/package.json
+++ b/newversion/package.json
@@ -15,13 +15,16 @@
     "@types/react-copy-to-clipboard": "^5.0.0",
     "@types/react-dom": "^17.0.5",
     "@types/react-modal": "^3.12.0",
+    "@types/react-timeago": "^4.1.2",
     "@wbe/use-async-effect": "^1.6.0",
+    "base64-img-promise": "^1.0.5",
     "bootstrap": "^5.0.1",
     "file-type": "^16.5.0",
     "http-proxy-middleware": "^0.19.1",
     "ipfs": "^0.55.3",
     "ipfs-api": "^26.1.2",
     "it-to-stream": "^1.0.0",
+    "javascript-time-ago": "^2.3.7",
     "moment": "^2.29.1",
     "mongodb": "^3.6.9",
     "react": "^17.0.2",
@@ -32,6 +35,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-share": "^4.4.0",
+    "react-timeago": "^6.2.1",
     "reactstrap": "^8.9.0",
     "sweetalert2": "^11.0.16",
     "typescript": "^4.3.2",
@@ -64,6 +68,8 @@
     ]
   },
   "devDependencies": {
+    "@types/image-to-base64": "^2.1.0",
+    "@types/javascript-time-ago": "^2.0.2",
     "@types/react-router-dom": "^5.1.7"
   }
 }
