--- a/newversion/package.json
+++ b/newversion/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.23",
+    "@types/jquery": "^3.5.5",
     "@types/node": "^15.6.1",
     "@types/react": "^17.0.8",
     "@types/react-copy-to-clipboard": "^5.0.0",
@@ -21,6 +22,7 @@
     "bootstrap": "^5.0.1",
     "file-type": "^16.5.0",
     "http-proxy-middleware": "^0.19.1",
+    "iframe-resizer-react": "^1.1.0",
     "ipfs": "^0.55.3",
     "ipfs-api": "^26.1.2",
     "it-to-stream": "^1.0.0",
@@ -30,6 +32,7 @@
     "react": "^17.0.2",
     "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.2",
+    "react-iframe": "^1.8.0",
     "react-modal": "^3.14.2",
     "react-moment": "^1.1.1",
     "react-router-dom": "^5.2.0",
