--- a/nft-borders/package.json
+++ b/nft-borders/package.json
@@ -12,6 +12,8 @@
     "@types/react-bootstrap": "^0.32.26",
     "@types/react-dom": "^17.0.9",
     "bootstrap": "^5.0.2",
+    "crypto-js": "^4.1.1",
+    "mongoose": "^5.13.3",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
@@ -21,6 +23,7 @@
     "typescript": "^4.3.5",
     "web-vitals": "^1.0.1"
   },
+  "proxy": "http://localhost:3002",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -46,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.0.2",
     "@types/react-router-dom": "^5.1.8"
   }
 }
