--- a/nft-borders/package.json
+++ b/nft-borders/package.json
@@ -21,8 +21,10 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "reactstrap": "^8.9.0",
     "typescript": "^4.3.5",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "web3": "^1.4.0"
   },
   "proxy": "http://localhost:3002",
   "scripts": {
