--- a/nft-borders/package.json
+++ b/nft-borders/package.json
@@ -13,6 +13,10 @@
     "@types/react-dom": "^17.0.9",
     "bootstrap": "^5.0.2",
     "crypto-js": "^4.1.1",
+    "jquery": "^3.6.0",
+    "jspdf": "^2.3.1",
+    "jspdf-autotable": "^3.5.15",
+    "mdbreact": "^5.1.0",
     "mongoose": "^5.13.3",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
