--- a/newversion/package.json
+++ b/newversion/package.json
@@ -31,6 +31,7 @@
     "mongodb": "^3.6.9",
     "qrcode.react": "^1.0.1",
     "react": "^17.0.2",
+    "react-bootstrap-modal": "^4.2.0",
     "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.2",
     "react-iframe": "^1.8.0",
