--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "mongoose": "^5.13.0",
-    "nodemailer": "^6.6.3"
+    "nodemailer": "^6.6.3",
+    "qrcode": "^1.4.4"
   }
 }
