--- a/newversion/package.json
+++ b/newversion/package.json
@@ -31,6 +31,7 @@
     "mongodb": "^3.6.9",
     "qrcode.react": "^1.0.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
     "react-bootstrap-modal": "^4.2.0",
     "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.2",
@@ -43,7 +44,7 @@
     "react-share": "^4.4.0",
     "react-timeago": "^6.2.1",
     "reactstrap": "^8.9.0",
-    "sweetalert2": "^11.0.16",
+    "sweetalert2": "^11.1.2",
     "typescript": "^4.3.2",
     "web-vitals": "^1.0.1",
     "web3": "^1.3.6"
